k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wiz
  labels:
    name: wiz
    purpose: wiz-technical-exercise
